07-Jul-2014 Added VisualCCommon.ICCompilerOptions.ForcedInclude compiler option, to preprocess specified header files automatically.

07-Apr-2014 Package definition files can now contain an Opus:PackageRoots element, providing additional package search paths. Removed -packageroots command line argument. Added -addpackageroots and -removepackageroots command line arguments.

02-Apr-2014 Exporting TMP and TEMP environment variables with the VisualC tools, to avoid generation of _CL_<hexdigits> temporary files in the current directory.

09-Mar-2014 Speculative fix for bad dependency graph generation, when dependents increase rank, but don't need to maintain the same "delta" between themselves and their dependees because other dependees have not moved.

06-Mar-2014 Added DxErr.lib to the Direct3D9 libraries to link against.

06-Feb-2014 Throw an exception if a C preprocessor definition contains a space. This can disable tools such as VisualStudio Intellisense.

25-Jan-2014 Fixing the dependency graph population. Don't move nodes further down the graph, if they are already offset enough from their dependee. Otherwise, empty ranks appear in the graph.

06-Jan-2014 Added VisualC-12.0 (VisualStudio 2013) support for Native and VSSolution builders.

04-Jan-2014 Added C.ILinkerOptionsOSX property FrameworkSearchDirectories, that affects the linker search paths. Added to GccCommon's linker options.

04-Jan-2014 Added C.ICCompilerOptionsOSX interface, with a FrameworkSearchDirectories property to add a search folder containing frameworks for the compiler to find. Implemented this for the Clang-Apple425 compiler.

02-Jan-2014 Modules with an overriden OutputName now generate .vcxproj files for VS10+ that do not generate MSBuild warnings for mismatched names.

22-Dec-2013 Fixing new lines in generated .vcproj files for custom builds that can affect VisualStudio deciding whether to rebuild or not (MSB8015).
