@@ -16,10 +16,10 @@ namespace C
         public static readonly Opus.Core.LocationKey ImportLibraryDir = new Opus.Core.LocationKey("ImportLibraryDirectory", Opus.Core.ScaffoldLocation.ETypeHint.Directory);
 
         [LocalCompilerOptionsDelegate]
-        protected static void DynamicLibrarySetOpusDLLPreprocessor(Opus.Core.IModule module, Opus.Core.Target target)
+        protected static void DynamicLibrarySetOpusDLLBuildPreprocessorDefine(Opus.Core.IModule module, Opus.Core.Target target)
         {
             var compilerOptions = module.Options as ICCompilerOptions;
-            compilerOptions.Defines.Add("D_OPUS_DYNAMICLIBRARY");
+            compilerOptions.Defines.Add("D_OPUS_DYNAMICLIBRARY_BUILD");
         }
 
         [LocalLinkerOptionsDelegate]
