@@ -1,30 +1,33 @@
 #ifndef DYNAMICLIBRARY_H
 #define DYNAMICLIBRARY_H
 
+/* specific platform settings */
 #if defined(_WIN32)
-
-#if defined(D_OPUS_DYNAMICLIBRARY)
-#define API __declspec(dllexport)
-#else
-#define API __declspec(dllimport)
+ #define API_EXPORT __declspec(dllexport)
+ #define API_IMPORT __declspec(dllimport)
+#elif __GNUC__ >= 4
+  #define API_EXPORT __attribute__ ((visibility("default")))
 #endif
 
-#elif defined(__unix__) || defined(__APPLE__)
+/* defaults */
+#ifndef API_EXPORT
+ #define API_EXPORT /* empty */
+#endif
+#ifndef API_IMPORT
+ #define API_IMPORT /* empty */
+#endif
 
-#if defined(D_OPUS_DYNAMICLIBRARY)
-#if __GNUC__ >= 4
-#define API __attribute__ ((visibility("default")))
-#else /* __GNUC__ */
-#define API /* empty */
-#endif /* __GNUC__ */
-#else /* OPUS_DYNAMICLIBRARY */
-#define API /* empty */
-#endif /* OPUS_DYNAMICLIBRARY */
-
+/* now define the library API based on whether it is built as static or not
+   the D_<package>_<module>_STATICAPI #define is populated in all uses, including the library build itself
+   the D_OPUS_DYNAMICLIBRARY_BUILD is only present for the library build when it is a dynamic library */
+#if defined(D_TEST4_MYDYNAMICLIBRARY_STATICAPI)
+ #define API /* empty */
 #else
-
-#error "Unsupported platform"
-
+ #if defined(D_OPUS_DYNAMICLIBRARY_BUILD)
+  #define API API_EXPORT
+ #else
+  #define API API_IMPORT
+ #endif
 #endif
 
 extern API int TestFunction();
